--- a/app/recognition/index.html
+++ b/app/recognition/index.html
@@ -193,7 +193,7 @@
                 <h6>May 2010</h6>
               </div>
               <div class="card-description">
-                <p>National Sea World / Busch Gardens Award for Environmental Excellenece - 2010</p>
+                <p>National Sea World / Busch Gardens Award for Environmental Excellence - 2010</p>
               </div>
             </div>
           </div>
@@ -312,7 +312,7 @@
                 <h6>December 2004</h6>
               </div>
               <div class="card-description">
-                <p>Government's Enviornmental and Economic Leadership Award - 2004</p>
+                <p>Government's Environmental and Economic Leadership Award - 2004</p>
               </div>
             </div>
           </div>
