Changed 'recived' to 'received'
Found under recent news

--- a/app/index.html
+++ b/app/index.html
@@ -274,7 +274,7 @@
               <div class="container">
                 <div class="col-sm-8 col-sm-offset-2">
                   <h3 class="text-center">
-                            We recived a watershed quality grant from Seterwater Utility Department of Water Resources of $2600 in the fall of 2011. Also, the Living Well Initiative grant of $500 was given to us by the Grants Advisory Board for Youth in January 2012.
+                            We received a watershed quality grant from Seterwater Utility Department of Water Resources of $2600 in the fall of 2011. Also, the Living Well Initiative grant of $500 was given to us by the Grants Advisory Board for Youth in January 2012.
                   </h3>
                 </div>
               </div>
